# meumc

./: CMakeLists.txt
src/: CMakeLists.txt  camera.c  camera.h  chunk.c  chunk.h  common.h  error.c  error.h  main.c  shader.c  shader.h  state.c  state.h
src/shader/: block.fs  block.vs
